force-app/main/default/objects/Contract/fields/LPCR_AjoutFraisGestion__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AjoutFraisGestion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AjoutFraisGestion</label>
    <type>Checkbox</type>
</CustomField>