force-app/main/default/objects/Contract/fields/LPCR_AvecSponsor__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AvecSponsor__c</fullName>
    <description>Coché si un sponsor est présent sur le contrat. Utilisé dans rapports</description>
    <formula>!ISBLANK(LPCR_SponsorEntreprise__c)</formula>
    <label>Avec sponsor</label>
    <type>Checkbox</type>
</CustomField>