force-app/main/default/objects/Contract/fields/LPCR_CompteFacturation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CompteFacturation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte de facturation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contrats (Compte de facturation)</relationshipLabel>
    <relationshipName>Contrats2</relationshipName>
    <type>Lookup</type>
</CustomField>