force-app/main/default/objects/Contract/fields/LPCR_ContactFacturation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactFacturation__c</fullName>
    <formula>SBQQ__Order__r.SBQQ__Quote__r.SBQQ__Account__r.blng__BillToContact__c</formula>
    <label>Contact Facturation</label>
    <type>Text</type>
</CustomField>