force-app/main/default/objects/Contract/fields/LPCR_ContactInscriptions__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactInscriptions__c</fullName>
    <formula>SBQQ__Order__r.SBQQ__Quote__r.SBQQ__Account__r.LPCR_ContactInscriptions__c</formula>
    <label>Contact Inscriptions</label>
    <type>Text</type>
</CustomField>