force-app/main/default/objects/Contract/fields/LPCR_ContactPrincipal__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactPrincipal__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;&amp;SBQQ__Order__r.SBQQ__Quote__r.SBQQ__Account__r.LPCR_ContactPrincipalCompte__c, SBQQ__Order__r.SBQQ__Quote__r.SBQQ__Account__r.LPCR_ContactPrincipalCompte__r.FirstName+&apos; &apos;+SBQQ__Order__r.SBQQ__Quote__r.SBQQ__Account__r.LPCR_ContactPrincipalCompte__r.LastName)</formula>
    <label>Contact Principal</label>
    <type>Text</type>
</CustomField>