force-app/main/default/objects/Contract/fields/LPCR_ContactRepresentant1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactRepresentant1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Représentant 1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Famille</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Contact Représentant 1)</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>