force-app/main/default/objects/Contract/fields/LPCR_ContactRepresentant2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactRepresentant2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Représentant 2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Parent</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Contact Représentant 2)</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>