force-app/main/default/objects/Contract/fields/LPCR_ContractEntreprise__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContractEntreprise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrat Entreprise</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contrats Familles</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>