force-app/main/default/objects/Contract/fields/LPCR_ContratActif__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContratActif__c</fullName>
    <description>Coché si le date du jour est comprise entre date de début et date de fin</description>
    <formula>AND(
  TODAY() &gt;=StartDate,
  TODAY() &lt;= EndDate
)</formula>
    <label>Contrat actif</label>
    <type>Checkbox</type>
</CustomField>