force-app/main/default/objects/Contract/fields/LPCR_ContratEntreprise__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContratEntreprise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LPCR_ContratEntreprise</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Contrats (LPCR_ContratEntreprise)</relationshipLabel>
    <relationshipName>Contrats</relationshipName>
    <type>Lookup</type>
</CustomField>