force-app/main/default/objects/Contract/fields/LPCR_ContratResilie__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContratResilie__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contrat Résilié</label>
    <type>Checkbox</type>
</CustomField>