force-app/main/default/objects/Contract/fields/LPCR_Creche__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Creche__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lien vers la crèche porteuse du contrat</description>
    <label>Crèche</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Le compte n&apos; a pas un type d&apos;enregistrement = Crèche</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Crèche</value>
        </filterItems>
        <infoMessage>type d&apos;enregistrement = Crèche</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contrats de la crèche</relationshipLabel>
    <relationshipName>Contrats</relationshipName>
    <type>Lookup</type>
</CustomField>