force-app/main/default/objects/Contract/fields/LPCR_DateDebut__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateDebut__c</fullName>
    <label>Date De Début</label>
    <type>Date</type>
</CustomField>