force-app/main/default/objects/Contract/fields/LPCR_DateDeDepart__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateDeDepart__c</fullName>
    <description>Rempli manuellement par le service famille. Utilisé dans reporting</description>
    <inlineHelpText>Rempli manuellement par le service famille. Utilisé dans reporting</inlineHelpText>
    <label>Date de Départ</label>
    <type>Date</type>
</CustomField>