force-app/main/default/objects/Contract/fields/LPCR_DateFin__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateFin__c</fullName>
    <label>Date De Fin</label>
    <type>Date</type>
</CustomField>