force-app/main/default/objects/Contract/fields/LPCR_DateFinFacturation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateFinFacturation__c</fullName>
    <inlineHelpText>&quot;Date de fin de facturation, compte tenu du préavis applicable&quot;</inlineHelpText>
    <label>Date De Fin De Facturation</label>
    <type>Date</type>
</CustomField>