force-app/main/default/objects/Contract/fields/LPCR_DateFinMaxQuoteLine__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateFinMaxQuoteLine__c</fullName>
    <label>Date de fin maximale QL</label>
    <type>Date</type>
</CustomField>