force-app/main/default/objects/Contract/fields/LPCR_DateLiberationBerceau__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateLiberationBerceau__c</fullName>
    <label>Date De Libération Du Berceau</label>
    <type>Date</type>
</CustomField>