force-app/main/default/objects/Contract/fields/LPCR_DateReceptionCourrierResiliation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateReceptionCourrierResiliation__c</fullName>
    <description>la date à laquelle on reçoit le courrier de résiliation envoyé par le client.</description>
    <inlineHelpText>Date de réception du courrier de résiliation recommandé</inlineHelpText>
    <label>Date de réception courrier résiliation</label>
    <type>Date</type>
</CustomField>