force-app/main/default/objects/Contract/fields/LPCR_DateReceptionDemandeFinContrat__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateReceptionDemandeFinContrat__c</fullName>
    <label>Date De Réception Demande Fin De Contrat</label>
    <type>Date</type>
</CustomField>