force-app/main/default/objects/Contract/fields/LPCR_DateRenouvellement__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateRenouvellement__c</fullName>
    <formula>IF( AND( OR(RecordType.DeveloperName = &apos;Reservataire&apos;,RecordType.DeveloperName = &apos;Referencement&apos;), ISPICKVAL( LPCR_TypeFacturation__c, &apos;Advance&apos; )), EndDate -  $CustomMetadata.LPCR_TypeContrat__mdt.B2B.LPCR_JourAvanceRenouvellement__c , IF(AND(RecordType.DeveloperName = &apos;Accueil&apos;, ISPICKVAL( LPCR_TypeFacturation__c, &apos;Advance&apos; ), ISPICKVAL( LPCR_TypeCreche__c , &apos;MICRO&apos;)), EndDate - $CustomMetadata.LPCR_TypeContrat__mdt.B2C_MICRO.LPCR_JourAvanceRenouvellement__c ,  IF(AND(RecordType.DeveloperName = &apos;Accueil&apos;, ISPICKVAL( LPCR_TypeFacturation__c, &apos;Advance&apos; ), ISPICKVAL( LPCR_TypeCreche__c , &apos;MAC&apos;)), EndDate -  $CustomMetadata.LPCR_TypeContrat__mdt.B2C_MAC.LPCR_JourAvanceRenouvellement__c ,  EndDate )  ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de Reconduction</label>
    <type>Date</type>
</CustomField>