force-app/main/default/objects/Contract/fields/LPCR_DateResiliationChoisie__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateResiliationChoisie__c</fullName>
    <inlineHelpText>Date de fin de facturation réelle, définitive.</inlineHelpText>
    <label>Date de résiliation choisie</label>
    <type>Date</type>
</CustomField>