force-app/main/default/objects/Contract/fields/LPCR_DateResiliationEffective__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateResiliationEffective__c</fullName>
    <formula>IF (  LPCR_DateLegaleResiliation__c  &lt;=  LPCR_DateResiliationSouhaitee__c ,LPCR_DateResiliationSouhaitee__c ,LPCR_DateLegaleResiliation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de résiliation Effective</label>
    <type>Date</type>
</CustomField>