force-app/main/default/objects/Contract/fields/LPCR_DateResiliationSouhaitee__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateResiliationSouhaitee__c</fullName>
    <formula>IF(
ISNULL(( SBQQ__Quote__r.LPCR_DateResiliationSouhaitee__c )), null,
(SBQQ__Quote__r.LPCR_DateResiliationSouhaitee__c))</formula>
    <label>Date de résiliation souhaitée</label>
    <type>Date</type>
</CustomField>