force-app/main/default/objects/Contract/fields/LPCR_DateRevisionPrix__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateRevisionPrix__c</fullName>
    <inlineHelpText>Si Révision de prix (%) non renseigné, la facturation de la commande sera suspendue à cette date.</inlineHelpText>
    <label>Date de révision de prix</label>
    <type>Date</type>
</CustomField>