force-app/main/default/objects/Contract/fields/LPCR_DureeContratJour__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DureeContratJour__c</fullName>
    <label>Durée du contrat en jours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>