force-app/main/default/objects/Contract/fields/LPCR_Enfant__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Enfant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Enfant couvert par le contrat</description>
    <label>Enfant</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Doit être un contact avec type d&#39;enregistrement = enfant</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Enfant</value>
        </filterItems>
        <infoMessage>type d&#39;enregistrement = enfant</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contrats</relationshipLabel>
    <relationshipName>Contrats</relationshipName>
    <type>Lookup</type>
</CustomField>