force-app/main/default/objects/Contract/fields/LPCR_FraisDossier__c.field-meta.xml
<CustomField>
    <fullName>LPCR_FraisDossier__c</fullName>
    <label>Frais de dossier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>