force-app/main/default/objects/Contract/fields/LPCR_FrequenceFacturation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_FrequenceFacturation__c</fullName>
    <label>Fréquence de facturation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__BillingFrequency</valueSetName>
    </valueSet>
</CustomField>