force-app/main/default/objects/Contract/fields/LPCR_IdExterne_SponsorEntreprise__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterne_SponsorEntreprise__c</fullName>
    <label>Id Externe</label>
    <length>20</length>
    <type>Text</type>
</CustomField>