force-app/main/default/objects/Contract/fields/LPCR_Indexation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Indexation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>champ pour determiner si le contrat a ete indexé</description>
    <label>LPCR_Indexation</label>
    <type>Checkbox</type>
</CustomField>