force-app/main/default/objects/Contract/fields/LPCR_InitAutoAvecDateDebut__c.field-meta.xml
<CustomField>
    <fullName>LPCR_InitAutoAvecDateDebut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Init auto avec date debu</label>
    <type>Checkbox</type>
</CustomField>