force-app/main/default/objects/Contract/fields/LPCR_JoursAvance__c.field-meta.xml
<CustomField>
    <fullName>LPCR_JoursAvance__c</fullName>
    <label>Jours à l&apos;avance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>