force-app/main/default/objects/Contract/fields/LPCR_MasterDevis__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MasterDevis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrat Cadre</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Contracts (Contrat Cadre)</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>