force-app/main/default/objects/Contract/fields/LPCR_MethodeRenouvellement__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MethodeRenouvellement__c</fullName>
    <label>Méthode Renouvellement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tacite</fullName>
            </value>
            <value>
                <fullName>Express</fullName>
            </value>
            <value>
                <fullName>Sans renouvellement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>