force-app/main/default/objects/Contract/fields/LPCR_MontantIndexation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MontantIndexation__c</fullName>
    <label>LPCR_MontantIndexation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>