force-app/main/default/objects/Contract/fields/LPCR_MotifResiliation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MotifResiliation__c</fullName>
    <label>Motif de résiliation</label>
    <length>200</length>
    <type>Text</type>
</CustomField>