force-app/main/default/objects/Contract/fields/LPCR_NombreDeBerceaux__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreDeBerceaux__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nombre de berceaux</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>