force-app/main/default/objects/Contract/fields/LPCR_NombreJoursCumules__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreJoursCumules__c</fullName>
    <formula>SBQQ__Quote__r.LPCR_NombreJoursCummul__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de jours cumulés</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>