force-app/main/default/objects/Contract/fields/LPCR_NouveauPlanFacturation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NouveauPlanFacturation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nouveau Plan de Facture</label>
    <referenceTo>blng__InvoicePlan__c</referenceTo>
    <relationshipLabel>Contrats</relationshipLabel>
    <relationshipName>Contrats</relationshipName>
    <type>Lookup</type>
</CustomField>