force-app/main/default/objects/Contract/fields/LPCR_NouveauPlanFacture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NouveauPlanFacture__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nouveau Plan de Facture</label>
    <referenceTo>blng__InvoicePlan__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>