force-app/main/default/objects/Contract/fields/LPCR_NumeroCommande__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NumeroCommande__c</fullName>
    <formula>SBQQ__Order__r.OrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro de commande</label>
    <type>Text</type>
</CustomField>