force-app/main/default/objects/Contract/fields/LPCR_NumeroDevis__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NumeroDevis__c</fullName>
    <formula>SBQQ__Quote__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro du devis</label>
    <type>Text</type>
</CustomField>