force-app/main/default/objects/Contract/fields/LPCR_ProcessIdRenouvellementContrat__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ProcessIdRenouvellementContrat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag Batch Id Renouvellement</label>
    <type>Checkbox</type>
</CustomField>