force-app/main/default/objects/Contract/fields/LPCR_RenouvellementAutomatique__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RenouvellementAutomatique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reconduction Automatique</label>
    <type>Checkbox</type>
</CustomField>