force-app/main/default/objects/Contract/fields/LPCR_RenouvellementPlanFacturation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RenouvellementPlanFacturation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan de Facture (Renouvellement)</label>
    <referenceTo>blng__InvoiceScheduler__c</referenceTo>
    <relationshipLabel>Contrats</relationshipLabel>
    <relationshipName>Contrats</relationshipName>
    <type>Lookup</type>
</CustomField>