force-app/main/default/objects/Contract/fields/LPCR_ResponsableADV__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ResponsableADV__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable ADV</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>