force-app/main/default/objects/Contract/fields/LPCR_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>