force-app/main/default/objects/Contract/fields/LPCR_SocieteFacturante__c.field-meta.xml
<CustomField>
    <fullName>LPCR_SocieteFacturante__c</fullName>
    <formula>HYPERLINK(&#39;/&#39;&amp;SBQQ__Order__r.SBQQ__Quote__r.LPCR_SocieteFacturante__c,  SBQQ__Order__r.SBQQ__Quote__r.LPCR_SocieteFacturante__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Société Facturante</label>
    <type>Text</type>
</CustomField>