force-app/main/default/objects/Contract/fields/LPCR_SponsorEntreprise__c.field-meta.xml
<CustomField>
    <fullName>LPCR_SponsorEntreprise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Nom de l&#39;entreprise si la place est sponsorisé</description>
    <label>Sponsor (entreprise)</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Le compte doit avoir un type d&#39;enregistrement = entreprise</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Entreprise</value>
        </filterItems>
        <infoMessage>Le compte doit avoir un type d&#39;enregistrement = entreprise</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contrats (Sponsor (entreprise))</relationshipLabel>
    <relationshipName>Contrats1</relationshipName>
    <type>Lookup</type>
</CustomField>