force-app/main/default/objects/Contract/fields/LPCR_StatutContrat__c.field-meta.xml
<CustomField>
    <fullName>LPCR_StatutContrat__c</fullName>
    <label>Statut Du Contrat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brouillon</fullName>
            </value>
            <value>
                <fullName>Envoyé pour signature</fullName>
            </value>
            <value>
                <fullName>Signé</fullName>
            </value>
            <value>
                <fullName>Actif</fullName>
            </value>
            <value>
                <fullName>Annulé</fullName>
            </value>
            <value>
                <fullName>Terminé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>