force-app/main/default/objects/Contract/fields/LPCR_StatutCourt__c.field-meta.xml
<CustomField>
    <fullName>LPCR_StatutCourt__c</fullName>
    <formula>IF(TEXT(LPCR_StatutInscription__c)=&quot;Recommandation validée&quot;,&quot;RV&quot;,LEFT(TEXT(LPCR_StatutInscription__c),1))</formula>
    <inlineHelpText>Statut de l&apos;inscription d&apos;un enfant</inlineHelpText>
    <label>Etat</label>
    <type>Text</type>
</CustomField>