force-app/main/default/objects/Contract/fields/LPCR_StatutInscription__c.field-meta.xml
<CustomField>
    <fullName>LPCR_StatutInscription__c</fullName>
    <description>statut de l&apos;inscription de l&apos;enfant</description>
    <label>Statut de l&apos;inscription</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LPCR_StatutInscription</valueSetName>
    </valueSet>
</CustomField>