force-app/main/default/objects/Contract/fields/LPCR_TechDateRevisionActuel__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TechDateRevisionActuel__c</fullName>
    <formula>LPCR_DateRevisionPrix__c-35</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LPCR_Tech_DateRevisionActuel</label>
    <type>Date</type>
</CustomField>