force-app/main/default/objects/Contract/fields/LPCR_TotaleGlobalePlanFacture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TotaleGlobalePlanFacture__c</fullName>
    <label>Valeur Globale Totale Contrat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>